Serialización de objetos

--- a/templates/InvoiceTemplates/shoppingCartDetails.html.twig
+++ b/templates/InvoiceTemplates/shoppingCartDetails.html.twig
@@ -55,7 +55,7 @@
                                             <td>{{ product.amount ?? null }}</td>
                                             <td>
                                                 <a
-                                                        href="/invoices/shopping-cart/delete-product/{{ product.id }}"
+                                                        href="/invoices/shopping-cart/delete-product/{{ product.code }}"
                                                         class="btn btn-primary text-decoration-none"
                                                 >
                                                     Eliminar
