--- a/templates/InvoiceTemplates/invoiceDetails.html.twig
+++ b/templates/InvoiceTemplates/invoiceDetails.html.twig
@@ -65,7 +65,7 @@
                                                 {% if invoice.status == "shopping-cart" %}
                                                     <td>
                                                         <a
-                                                                href="/invoices/shopping-cart/delete-product/{{ product.id }}"
+                                                                href="/invoices/shopping-cart/delete-product/{{ product.code }}"
                                                                 class="btn btn-primary text-decoration-none"
                                                         >
                                                             Eliminar
