--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -7,7 +7,6 @@
     {% include '/layouts/navbar.html.twig' %}
 
     <div class="container mt-5">
-
         {% for flash_message in app.flashes('exito') %}
             <div class="alert alert-success w-100" role="alert">
                 {{ flash_message }}
@@ -73,7 +72,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="modal fade" id="addProduct" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -82,28 +80,9 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form action="/invoices/shopping-cart/add-product" method="post">
-                                <div class="mb-3">
-                                    <input
-                                            type="text"
-                                            class="form-control d-none"
-                                            id="code"
-                                            name="code"
-                                            value="{{ product.code }}"
-                                    >
-                                </div>
-                                <div class="mb-3">
-                                    <label for="cantidad" class="form-label">Cantidad</label>
-                                    <input
-                                            type="number"
-                                            class="form-control"
-                                            id="amount"
-                                            name="amount"
-                                            required
-                                    >
-                                </div>
+                            {{ form_start(formAddShoppingCart, {"action" : path('add_product_shopping_cart'), "method" : "POST"}) }}
                                 <button type="submit" class="btn btn-primary">Enviar</button>
-                            </form>
+                            {{ form_end(formAddShoppingCart) }}
                         </div>
                     </div>
                 </div>
@@ -111,6 +90,4 @@
 
         {% endif %}
     </div>
-
-
 {% endblock %}
