--- a/templates/ProductTemplates/productList.html.twig
+++ b/templates/ProductTemplates/productList.html.twig
@@ -3,20 +3,16 @@
 {% block title %}Lista de productos{% endblock %}
 
 {% block body %}
-
     {% include '/layouts/navbar.html.twig' %}
-
     <div class="container mt-5">
         {% if products is empty %}
             <div class="alert alert-info" role="alert">
                 No hay productos disponibles en este momento.
             </div>
         {% else %}
-
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-
                 {% for product in products %}
-                    <a href="/product/details/{{ product.code }}" class="text-decoration-none">
+                    <a href="{{ path('product_details', {'code': product.code}) }}" class="text-decoration-none">
                         <div class="col text-dark">
                             <div class="card shadow-lg rounded">
                                 <div class="card-header bg-info text-white">
@@ -34,10 +30,7 @@
                         </div>
                     </a>
                 {% endfor %}
-
             </div>
         {% endif %}
-
     </div>
-
 {% endblock %}
