Uso del tipo de dato date en las fechas

--- a/templates/InvoiceTemplates/invoiceDetails.html.twig
+++ b/templates/InvoiceTemplates/invoiceDetails.html.twig
@@ -34,7 +34,7 @@
                                     ID: {{ invoice.id }}
                                 </p>
                                 <p class="card-text">
-                                    fecha: {{ invoice.date }}
+                                    fecha: {{ invoice.date|date('Y/m/d H:i:s') }}
                                 </p>
                                 <p class="card-text">
                                     Estado: {{ invoice.status }}
