--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -49,7 +49,7 @@
                                 </p>
                                 <a
                                         class="btn btn-primary"
-                                        href="/product/update/{{ product.code }}"
+                                        href="{{ path('update_product', {'code': product.code}) }}"
                                 >
                                     Actualizar
                                 </a>
@@ -63,7 +63,7 @@
                                 </button>
                                 <a
                                         class="btn btn-danger"
-                                        href="/product/delete/{{ product.code }}"
+                                        href="{{ path('delete_product', {'code': product.code}) }}"
                                 >
                                     Eliminar
                                 </a>
@@ -76,7 +76,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Enviar Producto</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Agregar producto</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
