--- a/templates/ProductTemplates/productForms.html.twig
+++ b/templates/ProductTemplates/productForms.html.twig
@@ -14,7 +14,7 @@
             <h1>{{ name }}</h1>
             {{ form_start(form, {"action" : "", "method" : "POST"}) }}
             {{ form_widget(form) }}
-            <button type="submit">{{ option }}</button>
+            <button type="submit" class="btn btn-primary">{{ option }}</button>
             {{ form_end(form) }}
         </div>
     </div>
