--- a/templates/UserTemplate/login.html.twig
+++ b/templates/UserTemplate/login.html.twig
@@ -1,4 +1,31 @@
+{# templates/login/index.html.twig #}
 {% extends 'base.html.twig' %}
+
+{# ... #}
+
+{% block body %}
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    <div class="d-flex w-100 align-items-center align-middle justify-content-center">
+        <div class="w-25">
+            <form action="{{ path('login_template') }}" method="post">
+                <label for="username">Email:</label>
+                <input type="text" id="username" name="_username" value="{{ last_username }}">
+
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="_password">
+
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+            </form>
+        </div>
+    </div>
+{% endblock %}
+
+{#  {% extends 'base.html.twig' %}
 
 {% block body %}
     <div class="d-flex w-100 align-items-center align-middle justify-content-center">
@@ -16,4 +43,4 @@
             {{ form_end(form) }}
         </div>
     </div>
-{% endblock %}
+{% endblock %} #}
