--- a/templates/UserTemplate/login.html.twig
+++ b/templates/UserTemplate/login.html.twig
@@ -4,9 +4,15 @@
 {# ... #}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="d-flex w-100 align-items-center align-middle justify-content-center mt-4">
+        <div class="w-25">
+            {% if error %}
+            <div class="alert alert-danger w-100" role="alert">
+                {{ error.messageKey(error.messageData, 'security')|trans }}
+            </div>
+            {% endif %}
+        </div>
+    </div>
 
     <div class="d-flex w-100 align-items-center align-middle justify-content-center">
         <div class="w-25">
@@ -24,23 +30,3 @@
         </div>
     </div>
 {% endblock %}
-
-{#  {% extends 'base.html.twig' %}
-
-{% block body %}
-    <div class="d-flex w-100 align-items-center align-middle justify-content-center">
-        <div class="w-25">
-
-            {% for flash_message in app.flashes('message') %}
-                <div class="alert alert-danger w-100" role="alert">
-                    {{ flash_message }}
-                </div>
-            {% endfor %}
-            <h1>Inicio de sesión</h1>
-            {{ form_start(form, {"action" : "", "method" : "POST"}) }}
-            {{ form_widget(form) }}
-            <button type="submit">Iniciar sesión</button>
-            {{ form_end(form) }}
-        </div>
-    </div>
-{% endblock %} #}
