--- a/templates/layouts/navbar.html.twig
+++ b/templates/layouts/navbar.html.twig
@@ -12,6 +12,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="{{ path('add_product') }}">Añadir poducto</a>
                     <a class="dropdown-item" href="{{ path('product_list_view') }}">Ver productos</a>
+                    <a class="dropdown-item" href="{{ path('product_expired_list_view') }}">No disponibles</a>
                 </div>
             </li>
             <li class="nav-item">
