--- a/templates/ProductTemplates/productList.html.twig
+++ b/templates/ProductTemplates/productList.html.twig
@@ -7,7 +7,7 @@
     <div class="container mt-5">
         {% if products is empty %}
             <div class="alert alert-info" role="alert">
-                No hay productos disponibles en este momento.
+                No se encontraron productos.
             </div>
         {% else %}
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
