--- a/templates/InvoiceTemplates/shoppingCartDetails.html.twig
+++ b/templates/InvoiceTemplates/shoppingCartDetails.html.twig
@@ -37,6 +37,7 @@
                                     <tr>
                                         <th scope="col">Nombre</th>
                                         <th scope="col">Cantidad</th>
+                                        <th scope="col">Precio</th>
                                         <th scope="col">Acción</th>
                                     </tr>
                                     </thead>
@@ -49,6 +50,7 @@
                                                 </a>
                                             </th>
                                             <td>{{ product.amount }}</td>
+                                            <td>{{ product.price }}</td>
                                             <td>
                                                 <a
                                                         href="{{ path('delete_product_to_shopping_cart_view', {'code': product.code}) }}"
@@ -59,6 +61,10 @@
                                             </td>
                                         </tr>
                                     {% endfor %}
+                                    <tr>
+                                        <th scope="col" colspan="3">Total:</th>
+                                        <td>{{ total }}</td>
+                                    </tr>
                                     </tbody>
                                 </table>
                                 <div class="d-flex w-100">
