--- a/templates/InvoiceTemplates/shoppingCartDetails.html.twig
+++ b/templates/InvoiceTemplates/shoppingCartDetails.html.twig
@@ -21,12 +21,12 @@
                                     usuario: {{ shoppingCart.user.email }}
                                 </h5>
                                 <p class="card-text">
-                                    ID: {{ shoppingCart.id }}
+                                    Code: {{ shoppingCart.code }}
                                 </p>
                                 <p class="card-text">
                                     fecha: {{ shoppingCart.date|date('Y/m/d H:i:s', 'America/Bogota') }}
                                 </p>
-                                <p class="card-text">
+                                <p class="card-text" id="status">
                                     Estado: {{ shoppingCart.status }}
                                 </p>
                                 <p class="card-text">
@@ -56,7 +56,7 @@
                                                         href="{{ path('delete_product_to_shopping_cart_view', {'code': product.code}) }}"
                                                         class="btn btn-primary text-decoration-none"
                                                 >
-                                                    Eliminar
+                                                    Eliminar carrito
                                                 </a>
                                             </td>
                                         </tr>
