--- a/templates/ProductTemplates/productDetails.html.twig
+++ b/templates/ProductTemplates/productDetails.html.twig
@@ -39,8 +39,8 @@
                                 <h5 class="card-title">
                                     Nombre: {{ product.name }}
                                 </h5>
-                                <p class="card-text">
-                                    ID: {{ product.id }}
+                                <p class="card-text" id="codeProduct">
+                                    Code: {{ product.code }}
                                 </p>
                                 <p class="card-text">
                                     Precio: {{ product.price }}
@@ -62,6 +62,7 @@
                                             type="button"
                                             class="btn btn-primary"
                                             data-toggle="modal"
+                                            id="modalAddProduct"
                                             data-target="#addProduct"
                                     >
                                         Agregar al carrito
@@ -90,7 +91,7 @@
                                 {{ form_start(formAddShoppingCart, {"action" : path('add_product_shopping_cart'), "method" : "POST"}) }}
                                 {{ form_row(formAddShoppingCart.code) }}
                                 {{ form_row(formAddShoppingCart.amount) }}
-                                    <button type="submit" class="btn btn-primary">Enviar</button>
+                                    <button type="submit" id="AddShoppingCart" class="btn btn-primary">Enviar</button>
                                 {{ form_end(formAddShoppingCart) }}
                             </div>
                         </div>
