--- a/templates/InvoiceTemplates/invoiceList.html.twig
+++ b/templates/InvoiceTemplates/invoiceList.html.twig
@@ -4,6 +4,14 @@
 
 {% block body %}
     {% include '/layouts/navbar.html.twig' %}
+    {% set invoiceForPage = 8 %}
+    {% set currentPage = app.request.query.get('page', 1) %}
+    {% set totallInvoices = invoices|length %}
+    {% set totalPages = (totallInvoices / invoiceForPage)|round(0, 'ceil') %}
+    {% set startIndex = (currentPage - 1) * invoiceForPage %}
+    {% set endIndex = (startIndex + invoiceForPage - 1) %}
+    {% set invoices = invoices|slice(startIndex, invoiceForPage) %}
+
     <div class="container mt-5">
         <h2 class="text-center mb-4">Mis facturas</h2>
         <div class="d-flex justify-content-center w-100">
@@ -19,7 +27,7 @@
                 </div>
             </div>
         </div>
-        {% if invoices is empty %}
+        {% if invoices is empty%}
             <div class="alert alert-info" role="alert">
                 No hay pedidos disponibles en este momento.
             </div>
@@ -59,6 +67,21 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="d-flex justify-content-center p-absolute mt-5" style="bottom: 0">
+                {% for page in 1..totalPages %}
+                    <a
+                            style="text-decoration: none; border-radius: 5px"
+                            {% if not status is defined %}
+                                href="{{ path(route, {'page': page }) }}"
+                            {% else %}
+                                href="{{ path(route, {'page': page, 'status' : status}) }}"
+                            {% endif %}
+                            class="{{ page == currentPage ? 'btn-primary' : 'btn-outline-primary' }} btn p-1 m-1"
+                    >
+                        {{ page }}
                     </a>
                 {% endfor %}
             </div>
