--- a/templates/ProductTemplates/productList.html.twig
+++ b/templates/ProductTemplates/productList.html.twig
@@ -4,20 +4,12 @@
 
 {% block body %}
     {% include '/layouts/navbar.html.twig' %}
-    {% set productsForPage = 12 %}
-    {% set currentPage = app.request.query.get('page', 1) %}
-    {% set totalPages = (allProducts|length / productsForPage)|round(0, 'ceil') %}
-    {% set startIndex = (currentPage - 1) * productsForPage %}
-    {% set endIndex = (startIndex + productsForPage - 1) %}
-    {% set products = allProducts|slice(startIndex, productsForPage) %}
-    
     <div class="container mt-5">
         {% if products is empty %}
             <div class="alert alert-info" role="alert">
                 No se encontraron productos.
             </div>
         {% else %}
-            <h3 style="text-align: center" class="mb-3">Productos: {{ allProducts|length }}</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 {% for product in products %}
                     <a href="{{ path('product_details', {'code': product.code}) }}" class="text-decoration-none">
@@ -40,15 +32,24 @@
                 {% endfor %}
             </div>
             <div class="d-flex justify-content-center p-absolute mt-5" style="bottom: 0">
-                {% for page in 1..totalPages %}
+                {% if previous >= 0 %}
                     <a
-                            style="text-decoration: none; border-radius: 5px"
-                            href="{{ path('product_list_view', {'page': page }) }}"
-                            class="{{ page == currentPage ? 'btn-primary' : 'btn-outline-primary' }} btn p-1 m-1"
+                            style="text-decoration: none"
+                            class="btn btn-primary me-2"
+                            href="{{ path('product_list_view', { offset: previous }) }}"
                     >
-                        {{ page }}
+                        Anterior
                     </a>
-                {% endfor %}
+                {% endif %}
+                {% if products|length >= cantMaxima %}
+                    <a
+                            style="text-decoration: none"
+                            class="btn btn-primary me-2"
+                            href="{{ path('product_list_view', { offset: next }) }}"
+                    >
+                        Siguiente
+                    </a>
+                {% endif %}
             </div>
         {% endif %}
     </div>
