--- a/templates/ProductTemplates/productList.html.twig
+++ b/templates/ProductTemplates/productList.html.twig
@@ -6,9 +6,27 @@
     {% include '/layouts/navbar.html.twig' %}
     <div class="container mt-5">
         {% if products is empty %}
-            <div class="alert alert-info" role="alert">
+            <div class="alert alert-primary" role="alert">
                 No se encontraron productos.
             </div>
+            {% if not cantPages == 0 %}
+                <div class="row mt-5" style="bottom: 0">
+                    <div class="col-12 d-flex" style="justify-content: center">
+                        {% for numberPages in 1..cantPages %}
+                                <a
+                                    {% if expired is defined %}
+                                        href="{{ path('product_expired_list_view', { page: numberPages-1 }) }}"
+                                    {% else %}
+                                        href="{{ path('product_list_view', { page: numberPages-1 }) }}"
+                                    {% endif %}
+                                        class="m-1 p-1 btn {{ numberPages == next ? 'btn-primary' : 'btn-outline-primary' }}"
+                                >
+                                    {{ numberPages }}
+                                </a>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
         {% else %}
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 {% for product in products %}
@@ -31,25 +49,67 @@
                     </a>
                 {% endfor %}
             </div>
-            <div class="d-flex justify-content-center p-absolute mt-5" style="bottom: 0">
-                {% if previous >= 0 %}
-                    <a
-                            style="text-decoration: none"
-                            class="btn btn-primary me-2"
-                            href="{{ path('product_list_view', { offset: previous }) }}"
-                    >
-                        Anterior
-                    </a>
-                {% endif %}
-                {% if products|length >= cantMaxima %}
-                    <a
-                            style="text-decoration: none"
-                            class="btn btn-primary me-2"
-                            href="{{ path('product_list_view', { offset: next }) }}"
-                    >
-                        Siguiente
-                    </a>
-                {% endif %}
+            <div class="row mt-5" style="bottom: 0">
+                <div class="col-3">
+                    {% if previous >= 0 %}
+                        <a
+                                style="text-decoration: none"
+                                class="btn btn-primary me-2"
+                                {% if expired is defined %}
+                                    href="{{ path('product_expired_list_view', { page: previous }) }}"
+                                {% else %}
+                                    href="{{ path('product_list_view', { page: previous }) }}"
+                                {% endif %}
+                        >
+                            Anterior
+                        </a>
+                    {% else %}
+                        <button
+                                style="text-decoration: none"
+                                class="btn btn-primary me-2"
+                                disabled
+                        >
+                            Anterior
+                        </button>
+                    {% endif %}
+                </div>
+                <div class="col-6 d-flex" style="justify-content: center">
+                    {% for numberPages in 1..cantPages %}
+                        <a
+                                {% if expired is defined %}
+                                    href="{{ path('product_expired_list_view', { page: numberPages-1 }) }}"
+                                {% else %}
+                                    href="{{ path('product_list_view', { page: numberPages-1 }) }}"
+                                {% endif %}
+                                class="m-1 p-1 btn {{ numberPages == next ? 'btn-primary' : 'btn-outline-primary' }}"
+                        >
+                            {{ numberPages }}
+                        </a>
+                    {% endfor %}
+                </div>
+                <div class="col-3 d-flex" style="justify-content: right">
+                    {% if products|length >= cantMaxima %}
+                        <a
+                                style="text-decoration: none"
+                                class="btn btn-primary me-2"
+                                {% if expired is defined %}
+                                    href="{{ path('product_expired_list_view', { page: next }) }}"
+                                {% else %}
+                                    href="{{ path('product_list_view', { page: next }) }}"
+                                {% endif %}
+                        >
+                            Siguiente
+                        </a>
+                    {% else %}
+                        <button
+                                style="text-decoration: none"
+                                class="btn btn-primary me-2"
+                                disabled
+                        >
+                            Siguiente
+                        </button>
+                    {% endif %}
+                </div>
             </div>
         {% endif %}
     </div>
